test/libsolidity/syntaxTests/array/length/pure_functions.hyp
contract C {
    uint constant LEN = keccak256(keccak256(33));
    uint[LEN] ids;
}
// ----
// TypeError 5462: (72-75): Invalid array length, expected integer literal or constant expression.
